--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Zedtix Game Development</title>
+  <title>Zedtix Gameeeeee Development</title>
 
   <link rel="shortcut icon" href="assets/Zedtix.jpg" type="image/x-icon">
   
