--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <span class="color-item bg-theme-purple" data-class="theme-purple"></span>
       </div>
       <select class="custom-select d-block my-2" id="change-page">
-        <option value="">Choose Page</option>
+        <option value="">Choose Pageeeeeeee</option>
         <option value="index">Topbar</option>
         <option value="blog-topbar">Blog (Topbar)</option>
         <option value="index-2">Minibar</option>
