--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Zedtix</b></h1>
-      <div class="badge">Programmer && Game Designer </div>
+      <div class="badge">Programmereeeeee && Game Designer </div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
